@@ -116,28 +116,28 @@ class ArgumentReader
 		char *name; ///< Name of called program.
 
 		/// Reads arguments into std::list of TParameters.
-		ArgumentReader(int argc, char **argv, struct Option opt_table[]);
+		ArgumentReader(int argc, char **argv, Option opt_table[]);
 
 	private:
 		/// Return shortopt for longopt stored in opt.
 		// @return shortopt
-		static int lookup_longopt(const char *long_opt, struct Option *opt_table);
+		static int lookup_longopt(const char *long_opt, Option *opt_table);
 
 		/// Check if short_opt is a known option.
 		// @return shortopt
-		static int lookup_shortopt(const char short_opt, struct Option *opt_table);
+		static int lookup_shortopt(const char short_opt, Option *opt_table);
 
 		/// Return Option from internal table.
-		static Option *lookup_option(const int opt, struct Option *opt_table) ATTRIBUTE_PURE;
+		static Option *lookup_option(const int opt, Option *opt_table) ATTRIBUTE_PURE;
 
 		/// Return number of args for opt
-		static unsigned int numargs(const int opt, struct Option *opt_table) ATTRIBUTE_PURE;
+		static unsigned int numargs(const int opt, Option *opt_table) ATTRIBUTE_PURE;
 
 		/// Fold parameter-list so that a option with an arguments has its argument set
 		// internal rather than lying around after it in the list.
 		// Options which are booleans and integers will be removed and their
 		// values increased, flipped, set true or whatever.
-		void foldAndRemove(struct Option *opt_table);
+		void foldAndRemove(Option *opt_table);
 };
 
 #endif /* EIX__ARGSREADER_H__ */
